objects/zkusps__QueuedPackage__c.object
<CustomObject>
    <fields>
        <fullName>zkusps__DeclaredValue__c</fullName>
        <description>correlates to &quot;USPS Mail Piece&quot; field &quot;Value of Contents (USD)&quot;</description>
        <label>Declared Value</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__Height__c</fullName>
        <label>Height</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__Length__c</fullName>
        <label>Length</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__NonMachinable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Machinable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__QueuedShipment__c</fullName>
        <label>Queued Shipment</label>
        <referenceTo>zkusps__QueuedShipment__c</referenceTo>
        <relationshipLabel>USPS Queued Packages</relationshipLabel>
        <relationshipName>USPS_Queued_Packages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkusps__WeightOunces__c</fullName>
        <label>Weight Ounces</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__WeightPounds__c</fullName>
        <label>Weight Pounds</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__Width__c</fullName>
        <label>Width</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>USPS Queued Package</label>
    <nameField>
        <displayFormat>Queued-Package-{00000000}</displayFormat>
        <label>Queued Package Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>USPS Queued Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>